Integer and Float constructor replaced by factory methods
Addresses #20